--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
           <h2>My Professional Profile</h2>
           <a href="https://github.com/ilzi6250" type="button" class="btn btn-outline-primary">Link to my GitHub</a><br />
-          <img src="20190910_153702.jpg" alt="Me">
+          <img src="https://github.com/ilzi6250/Ilya_Zinyakin/blob/master/20190910_153702.jpg" alt="Me">
           <h2>My Favorite Projects</h2>
 
           <table class="table table-striped">
