--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
           <a href="form.html" type="button" class="btn btn-primary">Add Interest</a>
           <div class="card-deck">
             <div class="card" style="width:250px">
-              <img class="card-img-top" src="C:\Users\iziny\OneDrive\Desktop\MyWebPics\coding.jpg" alt="Card image">
+              <img class="card-img-top" src="https://github.com/ilzi6250/Ilya_Zinyakin/blob/master/coding.jpg" alt="Card image">
               <div class="card-body">
                 <h4 class="card-title">Coding</h4>
                 <p class="card-text">Coding is a big passion of mine, from software applications to game design.</p>
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="C:\Users\iziny\OneDrive\Desktop\MyWebPics\Lost-season1.jpg" alt="Card image">
+              <img class="card-img-top" src="https://github.com/ilzi6250/Ilya_Zinyakin/blob/master/341853.jpg" alt="Card image">
               <div class="card-body">
                 <h4 class="card-title">Lost</h4>
                 <p class="card-text">Lost the TV show was always my favorite. The acting was phenomenal</p>
