--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
           <h2>My Professional Profile</h2>
           <a href="https://github.com/ilzi6250" type="button" class="btn btn-outline-primary">Link to my GitHub</a><br />
-          <img src="https://drive.google.com/drive/folders/1WKROP4o8gwBZ4dzkOxoF5JX4BVDe5c8T/20190910_153702.jpg" alt="Me">
+          <a href="https://drive.google.com/drive/folders/1WKROP4o8gwBZ4dzkOxoF5JX4BVDe5c8T/20190910_153702.jpg"><img src="https://drive.google.com/drive/folders/1WKROP4o8gwBZ4dzkOxoF5JX4BVDe5c8T/20190910_153702.jpg" alt="Me"></a>
+
           <h2>My Favorite Projects</h2>
 
           <table class="table table-striped">
