--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <a href="form.html" type="button" class="btn btn-primary">Add Interest</a>
           <div class="card-deck">
             <div class="card" style="width:250px">
-              <img class="card-img-top" src="https://github.com/ilzi6250/Ilya_Zinyakin/blob/master/coding.jpg" alt="Card image">
+              <img class="card-img-top" src="https://images.unsplash.com/photo-1534972195531-d756b9bfa9f2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="Card image">
               <div class="card-body">
                 <h4 class="card-title">Coding</h4>
                 <p class="card-text">Coding is a big passion of mine, from software applications to game design.</p>
