--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
           <h2>My Professional Profile</h2>
           <a href="https://github.com/ilzi6250" type="button" class="btn btn-outline-primary">Link to my GitHub</a><br />
-          <img src="https://github.com/ilzi6250/Ilya_Zinyakin/blob/master/20190910_153702.jpg" alt="Me">
+          <img src="https://www.colorado.edu/engineering/sites/default/files/styles/medium/public/people/ilyazinyakin2.png?itok=l-M2dc0X" alt="Me">
 
           <h2>My Favorite Projects</h2>
 
@@ -76,14 +76,14 @@
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="https://github.com/ilzi6250/Ilya_Zinyakin/blob/master/341853.jpg" alt="Card image">
+              <img class="card-img-top" src="https://vignette.wikia.nocookie.net/lostpedia/images/1/16/Lost-season1.jpg/revision/latest?cb=20070303221754" alt="Card image">
               <div class="card-body">
                 <h4 class="card-title">Lost</h4>
                 <p class="card-text">Lost the TV show was always my favorite. The acting was phenomenal</p>
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="C:\Users\iziny\OneDrive\Desktop\MyWebPics\341853.jpg" alt="Card image">
+              <img class="card-img-top" src="https://images7.alphacoders.com/341/thumb-1920-341853.jpg" alt="Card image">
               <div class="card-body">
                 <h4 class="card-title">Video Games</h4>
                 <p class="card-text">I like to enjoy my free time with all sorts of video games on my PC. From Stellaris to Mass Effect.</p>
