--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <body>
         <style type="text/css">
         img {
-          border-radius: 300px;
+          border-radius: 350px;
         }
 
         </style>
@@ -35,7 +35,7 @@
 
           <h2>My Professional Profile</h2>
           <a href="https://github.com/ilzi6250" type="button" class="btn btn-outline-primary">Link to my GitHub</a><br />
-          <img src="https://www.colorado.edu/engineering/sites/default/files/styles/medium/public/people/ilyazinyakin2.png?itok=l-M2dc0X" alt="Me">
+          <img src="https://www.colorado.edu/engineering/sites/default/files/styles/medium/public/people/ilyazinyakin2.png?itok=l-M2dc0X" width="300" height="300" alt="Me">
 
           <h2>My Favorite Projects</h2>
 
