--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <title>About Me</title>
       </head>
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <a class="navbar-brand" href="mypage_bootstrap.html">Home</a>
+        <a class="navbar-brand" href="https://github.com/ilzi6250/Ilya_Zinyakin/blob/master/index.html">Home</a>
       </nav>
       <body>
         <style type="text/css">
