--- a/form.html
+++ b/form.html
@@ -16,7 +16,7 @@
         <title>Form</title>
       </head>
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <a class="navbar-brand" href="mypage_bootstrap.html">Home</a>
+        <a class="navbar-brand" href="https://ilzi6250.github.io/Ilya_Zinyakin/">Home</a>
       </nav>
       <body>
         <style>
