--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
           </div>
 
           <h2>My Professional Profile</h2>
-          <a href="https://github.com/ilzi6250" type="button" class="btn btn-outline-primary">Link to my GitHub</a><br />
+          <a href="https://github.com/ilzi6250" type="button" class="btn btn-outline-primary">Link to my GitHub</a>
+          <a href="mypage.html" type="button" class="btn btn-outline-primary">Link to my GitHub</a>
+          <br />
           <img src="https://www.colorado.edu/engineering/sites/default/files/styles/medium/public/people/ilyazinyakin2.png?itok=l-M2dc0X" width="400" height="400" alt="Me">
 
           <h2>My Favorite Projects</h2>
