--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </head>
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <a class="navbar-brand" href="https://ilzi6250.github.io/Ilya_Zinyakin/">Home</a>
+          <a class="nav-item nav-link" href="login.html">Sign Up Modal</a>
       </nav>
       <body>
         <style type="text/css">
