--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
         <title>About Me</title>
       </head>
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <a class="navbar-brand" href="https://ilzi6250.github.io/Ilya_Zinyakin/index.html">Home</a>
+        <a class="navbar-brand" href="index.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="https://github.com/ilzi6250/Ilya_Zinyakin/login.html">Sign Up Modal</a>
+                <a class="nav-link" href="login.html">Sign Up Modal</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://github.com/ilzi6250/Ilya_Zinyakin/blob/master/tic-tac-toe/tic-tac-toe.html">Tic-Tac-Toe</a>
+                <a class="nav-link" href="tic-tac-toe.html">Tic-Tac-Toe</a>
               </li>
             </ul>
           </div>
