--- a/index.html
+++ b/index.html
@@ -15,22 +15,18 @@
 
         <title>About Me</title>
       </head>
-      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <a class="navbar-brand" href="https://ilzi6250.github.io/Ilya_Zinyakin/">Home</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="login.html">Sign Up Modal</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="tic-tac-toe.html">Tic-Tac-Toe</a>
-              </li>
-            </ul>
-          </div>
-      </nav>
+      <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">About Me</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="https://ilzi6250.github.io/Ilya_Zinyakin/login.html">Sign Up</a></li>
+      <li><a href="https://ilzi6250.github.io/Ilya_Zinyakin/tic-tac-toe/tic-tac-toe.html">TicTacToe</a></li>
+    </ul>
+  </div>
+</nav>
       <body>
         <style type="text/css">
         img {
