--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <title>About Me</title>
       </head>
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <a class="navbar-brand" href="https://ilzi6250.github.io/Ilya_Zinyakin/index.html">Home</a>
+        <a class="navbar-brand" href="https://ilzi6250.github.io/Ilya_Zinyakin/index.html">Profile</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
